--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,36 +1,138 @@
-/* Navbar.css */
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto&family=Satisfy&display=swap');
+:root {
+  --negro: rgb(38, 37, 35);
+  --rosado: rgb(239, 180, 179);
+  --piel: rgb(242, 202, 167);
+  --verde: #C1D2B1;
+  --marron: rgb(167, 94, 53);
+  --blanco: rgb(242, 242, 242);
+}
+
+
+
+ /* Navbar.css */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Satisfy", cursive;
+  font-size: 1.2rem;
+}
+* body p{
+  font-family: sans-serif;
+}
 
 .navbar {
-    background-color: #333;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: var(--blanco);
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Añade espacio entre los elementos */
+  padding: 10px 20px; /* Ajusta el relleno */
+}
+
+.logo{
+  padding-top: 1rem;
+}
+.logo img {
+  height: 100px; /* Reduce el tamaño del logo */
+}
+
+.links {
+  display: flex;
+}
+
+.menu-opciones {
+  list-style-type: none; /* Quita los puntos de lista */
+  display: grid;
+  grid-template-columns:1fr 1fr 1fr;
+}
+.shopping-cart-container{
+  grid-column:  2;
+}
+
+/* prvisional */
+li ul, a{
+  color: var(--marron);
+  text-align: center;
+  margin: .5rem;
+  cursor: default;
+}
+li ul:hover, a:hover{
+  color: var(--rosado);
+}
+
+.links a {
+  text-decoration: none;
+}
+
+.links a:hover {
+  text-decoration: underline;
+}
+
+.redes {
+  display: flex;
+}
+
+.redes .icon {
+  margin-right: 10px; 
+  color: var(--marron);
+}
+
+.icon:hover{
+  color: var(--rosado);
+}
+.menu-toggle{
+  color: var(--blanco);
+}
+
+
+@media screen and (max-width: 768px) {
+  .menu-opciones {
+    display: none; /* Oculta las opciones del navbar principal */
+    position: absolute;
+    top: 11%;
+    left: 0;
+    width: 100%;
+    background-color: var(--blanco);
+    z-index: 1;
+    text-align: center;
+    border-radius: 0 0 2rem 2rem;
+    transition: transform 0.3s ease; /* Transición suave */
+    transform: translateY(-100%); /* Oculta inicialmente el menú fuera de la pantalla */
   }
-  
-  .links {
-    display: flex;
-    margin-left: auto; /* Coloca los elementos a la derecha */
+
+  .menu-opciones ul {
+    padding: 10px 0;
   }
-  
-  .links a {
-    color: #fff;
-    text-decoration: none;
-    margin-right: 20px;
+
+  .menu-opciones li {
+    margin-bottom: 10px;
   }
-  
-  .links a:hover {
-    text-decoration: underline;
+
+  .menu-opciones li:last-child {
+    margin-bottom: 0;
   }
-  
-  .shopping-cart-link {
-    color: #fff;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
+
+  .menu-opciones a {
+    display: block;
   }
-  
-  .shopping-cart-link:hover {
-    text-decoration: underline;
+
+  .menu-opciones.active {
+    display: block; /* Muestra el menú desplegable cuando está activo */
+    transform: translateY(0);
   }
-  
+
+  .menu-toggle {
+    display: block;
+    cursor: pointer;
+    text-align: center;
+    color: var(--marron);
+    font-size: 1.5rem;
+    margin-right: 10px;
+  }
+
+  .menu-toggle:hover {
+    color: var(--rosado);
+  }
+
+
+}
