--- a/src/pages/carro/carro.css
+++ b/src/pages/carro/carro.css
@@ -1,28 +1,30 @@
 /* Carro.css */
 
 .carro {
-    background-color: #f8f9fa; /* Fondo gris claro */
+    background-color: var(--blanco); 
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
     max-width: 600px; /* Ancho máximo del carrito */
-    margin: 0 auto; /* Centrar el carrito en el contenedor */
+    margin: 2rem auto; /* Centrar el carrito en el contenedor */
   }
-  
+
+  .imagen-horno{
+    width: 3rem;
+  }
   .carro h1 {
-    color: #000000; /* Azul */
+    color: var(--negro); /* Azul */
   }
   
   .cartItems {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    display: flex;
+    flex-direction: column;
     gap: 20px;
   }
   
   /* Estilo para cada elemento del carrito */
   .cartItem {
-    background-color: #fff; /* Fondo blanco */
-    border: 1px solid #dee2e6; /* Borde gris claro */
+    background-color: #960000; /* Fondo blanco */
+    border: 1px solid #0080ff; /* Borde gris claro */
     border-radius: 8px;
     padding: 15px;
     text-align: center;
@@ -42,5 +44,45 @@
     margin-bottom: 10px;
   }
   
-  /* Otros estilos según tus necesidades */
+.pagar, .subtototal-estilo{
+  font-family: sans-serif;
+  text-align: right;
+  padding-right: 1rem;
+
+}
   
+.subtototal-estilo{
+  font-weight: lighter;
+}
+
+.btn-pagar{
+  background-color: var(--verde);
+  color: var(--negro);
+  padding: 10px 20px;
+  border: none;
+  margin-top: 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  font-size: large;
+}
+.btn-pagar:hover{
+  background-color: var(--verdeOscuro);
+  color: var(--blanco);
+}
+
+
+.pizza-error-container {
+  background-image: url('../../assets/fondo-error.png');
+  background-size: contain; /* Cambiar a 'contain' para que la imagen se ajuste dentro del contenedor */
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 3rem;
+  height: 20vh;
+  padding-right: 2vh;
+}
+
+.pizza-error{
+  margin-top: 5vh;
+  height: 10vh;
+}
