correcion anadir pizza
arreglando funcionalidad de agragar el precio correcto para el tipo de pizza seleccionado

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,9 @@
   color: #61dafb;
 }
 
+.footer {
+  flex-shrink: 0; /* Evita que el footer se contraiga si hay poco contenido */
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
