--- a/src/pages/carro/carro.css
+++ b/src/pages/carro/carro.css
@@ -1,61 +1,68 @@
 /* Carro.css */
 
 .carro {
-    background-color: var(--blanco); 
-    padding: 20px;
-    border-radius: 10px;
-    max-width: 600px; /* Ancho máximo del carrito */
-    margin: 2rem auto; /* Centrar el carrito en el contenedor */
-  }
+  background-color: var(--blanco);
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 600px; /* Ancho máximo del carrito */
+  margin: 27vh auto; /* Centrar el carrito en el contenedor */
+}
 
-  .imagen-horno{
-    width: 3rem;
-  }
-  .carro h1 {
-    color: var(--negro); /* Azul */
-  }
-  
-  .cartItems {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  
-  /* Estilo para cada elemento del carrito */
-  .cartItem {
-    background-color: #960000; /* Fondo blanco */
-    border: 1px solid #0080ff; /* Borde gris claro */
-    border-radius: 8px;
-    padding: 15px;
-    text-align: center;
-    transition: transform 0.3s ease-in-out; /* Efecto de transición */
-  }
-  
-  .cartItem:hover {
-    transform: scale(1.05); /* Escala al hacer hover */
-  }
-  
-  /* Estilo para la imagen dentro de cada elemento del carrito */
-  .cartItem img {
-    max-width: 100%;
-    max-height: 150px;
-    object-fit: cover;
-    border-radius: 8px;
-    margin-bottom: 10px;
-  }
-  
-.pagar, .subtototal-estilo{
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.imagen-horno {
+  width: 3rem;
+}
+.carro h1 {
+  color: var(--negro); /* Azul */
+}
+
+.cartItems {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+/* Estilo para cada elemento del carrito */
+.cartItem {
+  background-color: #960000; /* Fondo blanco */
+  border: 1px solid #0080ff; /* Borde gris claro */
+  border-radius: 8px;
+  padding: 15px;
+  text-align: center;
+  transition: transform 0.3s ease-in-out; /* Efecto de transición */
+}
+
+.cartItem:hover {
+  transform: scale(1.05); /* Escala al hacer hover */
+}
+
+/* Estilo para la imagen dentro de cada elemento del carrito */
+.cartItem img {
+  max-width: 100%;
+  max-height: 150px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.pagar,
+.subtototal-estilo {
   font-family: sans-serif;
   text-align: right;
   padding-right: 1rem;
-
 }
-  
-.subtototal-estilo{
+
+.subtototal-estilo {
   font-weight: lighter;
 }
 
-.btn-pagar{
+.btn-pagar {
   background-color: var(--verde);
   color: var(--negro);
   padding: 10px 20px;
@@ -66,14 +73,13 @@
   transition: background-color 0.3s ease-in-out;
   font-size: large;
 }
-.btn-pagar:hover{
+.btn-pagar:hover {
   background-color: var(--verdeOscuro);
   color: var(--blanco);
 }
 
-
 .pizza-error-container {
-  background-image: url('../../assets/fondo-error.png');
+  background-image: url("../../assets/fondo-error.png");
   background-size: contain; /* Cambiar a 'contain' para que la imagen se ajuste dentro del contenedor */
   background-position: center;
   background-repeat: no-repeat;
@@ -82,7 +88,7 @@
   padding-right: 2vh;
 }
 
-.pizza-error{
+.pizza-error {
   margin-top: 5vh;
   height: 10vh;
 }
